# transport-validator

./: .rumdl.toml  Cargo.toml  Dockerfile  LICENSE  license.MIT.md  readme.md
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: test.yml
src/: custom_rules.rs  daemon.rs  issues.rs  lib.rs  main.rs  metadatas.rs  validate.rs  visualization.rs
src/validators/: agency.rs  agency_id.rs  calendar.rs  check_id.rs  check_name.rs  coordinates.rs  duplicate_stops.rs  duration_distance.rs  fare_attributes.rs  feed_info.rs  file_presence.rs  interpolated_stoptimes.rs  invalid_reference.rs  issues.rs  metadatas.rs  mod.rs  raw_gtfs.rs  route_name.rs  route_type.rs  routes.rs  shapes.rs  stop_times.rs  stops.rs  sub_folder.rs  unusable_trip.rs  unused_stop.rs
test_data/accessibility/: agency.txt  stop_times.txt  stops.txt  trips.txt
test_data/agency/: agency.txt
test_data/agency_multiple/: agency.txt  calendar.txt  calendar_dates.txt  routes.txt
test_data/arrange_by_phone_stops/: stop_times.txt
test_data/check_id/: shapes.txt  stops.txt
test_data/check_name/: feed_info.txt  routes.txt
test_data/coordinate_with_driver_stops/: stop_times.txt
test_data/custom_route_color/: agency.txt  routes.txt
test_data/custom_rules/: custom_rules.yml
test_data/duplicate_stop_sequence/: routes.txt  stop_times.txt  stops.txt  trips.txt
test_data/duplicate_stops/: stops.txt
test_data/duplicates/: agency.txt  calendar.txt  calendar_dates.txt  fare_attributes.txt  fare_rules.txt  frequencies.txt  pathways.txt  routes.txt  shapes.txt  stops.txt  trips.txt
test_data/duration_distance/: stop_times.txt  stops.txt  trips.txt
test_data/empty_calendar/: routes.txt
test_data/fare_attributes/: fare_attributes.txt
test_data/feed_info/: agency.txt  feed_info.txt  routes.txt  stops.txt
test_data/interpolated_stop_times/: stop_times.txt  trips.txt
test_data/invalid_references/: routes.txt  stop_times.txt  stops.txt  trips.txt
test_data/invalid_stop_file/: routes.txt  stops.txt
test_data/missing_agency_id/: routes.txt  trips.txt
test_data/missing_mandatory_files/: attributions.txt  invalid_file.txt  pathways.txt
test_data/missing_route_color/: routes.txt
test_data/no_optional_files/: fare_attributes.txt
test_data/optimisation_route_trips/: agency.txt  calendar.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
test_data/route_type/: routes.txt
test_data/route_type_invalid/: calendar.txt  stop_times.txt  stops.txt
test_data/route_type_missing/: routes.txt
test_data/shapes/: shapes.txt  stops.txt  trips.txt
test_data/stop_times_decrease/: stop_times.txt  trips.txt
test_data/stop_times_increase/: agency.txt  calendar.txt  feed_info.txt  routes.txt  stop_times.txt  trips.txt
test_data/stop_times_location_type/: stop_times.txt  stops.txt
test_data/stop_times_missing_time/: stop_times.txt  stops.txt
test_data/stops/: stops.txt  trips.txt
test_data/unusable_trip/: routes.txt  stop_times.txt  stops.txt  trips.txt
test_data/unused_stop/: routes.txt  stops.txt
