[package]
name = "validator"
version = "0.2.3"
authors = ["Tristram Gräbener <tristramg@gmail.com>", "Francis Chabouis <fchabouis@gmail.com>"]
edition = "2018"

[profile.release]
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
env_logger = "0.10"
anyhow = "1"
futures = "0.3"
geo = "0.24"
gtfs-structures = "0.34"
iso4217 = "0.3"
isolang = "2.1"
itertools = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
structopt = "0.3"
url = "2"
actix-web = "4.0"
actix-rt = "2"
geojson = "0.24"
rgb = "0.8"

